#
# $Revision$
#EHEADER***********************************************************************

#=============================================================================
#
# This file chronicles user-level changes/additions to hypre, beginning
# with the most recent release.
#
#=============================================================================

- Both PCG and GMRES are available now when using the Struct or SStruct
  matrix classes (only one or the other was previously available).

- First working multiprocessor version of SStruct interface.

- Fixed a bug in PILUT that effected multiprocessor runs.

Version 1.3.1b released, 2000/10/12.

Version 1.3.0b released, 2000/10/11.

- The number of threads to use in an OpenMP run can now be specified via
  either the OMP_NUM_THREADS environment variable, or by the routine
  omp_set_num_threads().

- Added fortran interface support for compilers that mangle names with
  all capitals (e.g., Cray fortran compilers).  To use, specify the
  '--with-CFLAGS=-DHYPRE_CRAY' option on the 'configure' line.

Version 1.2.0 released, 2000/09/22.

Version 1.1.0 released, 2000/09/07.

- Setup time for PILUT has been dramatically reduced in the case of
  very small drop tolerances, and memory problems that were causing
  coredumps on >2 processors have been fixed.

- Changed Struct interface include file names to be consistent with
  the rest of the library.  They are now:

    HYPRE_struct_mv.h
    HYPRE_struct_ls.h

  The Struct library names have also changed similarly.

- Removed the `stencil' argument from `HYPRE_StructVectorCreate'.

- Added a new interface for semi-structured grids.  This is still very
  much a beta implementation, and should be used with extreme caution
  until further notice.

- The main header files have been restructured to be more readable.
  They will soon include full documentation for their interfaces.

New internal installation: V1.0.0, 2000/07/06
