@@ -14,6 +14,10 @@
 #
 #=============================================================================
 
+- Changed SStruct interface: The SStructGraphAddEntries routine now
+  only sets one graph entry at a time.  See the reference manual for
+  details on the new prototype and usage.
+
 - Both PCG and GMRES are available now when using the Struct or SStruct
   matrix classes (only one or the other was previously available).
 
